name:                api-gateway
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/mattmoore/api-gateway-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Matt Moore
maintainer:          mattmoore@carbonhelix.com
copyright:           2017 Matt Moore
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , utf8-string
                     , HTTP
                     , http-conduit
                     , http-types
                     , yaml
                     , aeson
  default-language:    Haskell2010

executable api-gateway-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , api-gateway
                     , HTTP
                     , http-conduit
                     , http-types
                     , warp
                     , wai
  default-language:    Haskell2010

test-suite api-gateway-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , api-gateway
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mattmoore/api-gateway-haskell
